# Fridge-Calendar

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  application.cpp  epaper.cpp  g_calendar.cpp  g_calendar_config.cpp  idf_component.yml  localtime.cpp  main.cpp  wifi.cpp
main/include/: OpenSans_Condensed-Bold-8.h  OpenSans_SemiCondensed-Bold-10.h  OpenSans_SemiCondensed-Bold-12.h  OpenSans_SemiCondensed-Medium-24.h  app_config.hpp  application.hpp  epaper.hpp  g_calendar.hpp  g_calendar_config.hpp  img_home.h  localtime.hpp  wifi.hpp
